--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1079,6 +1079,7 @@ z-index: 9999;
   cursor: pointer;
   top: 25px;
   transition: all .3s ease-in-out;
+}
 .foto_perfil:hover {
   border: 1px solid #71FF95;
 }
