--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1487,7 +1487,7 @@ button:hover {
 
 
 .fontawesome-bell {
-  color: transparent;
+  color: #FFF;
   cursor:pointer;
   text-align:center;
   font-size: 38px;
