--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -450,6 +450,7 @@ span[class*="thumbs-up"]:hover {
 .fontawesome-random {
   color:#FFF;
   cursor:pointer;
+  top: 3px;
   text-align:center;
   font-size:38px;
   padding:0px;
@@ -469,6 +470,7 @@ span[class*="thumbs-up"]:hover {
 .fontawesome-comment-alt {
 color: #FFF;
 cursor:pointer;
+top: 3px;
 text-align: center;
 /*margin: 1171px;
 top:-1158px;
@@ -492,6 +494,7 @@ opacity:1;
 .fontawesome-th {
 color:#FFF;
 cursor:pointer;
+top: 3px;
 text-align: center;
 /*margin: 1115px;
 top:-1099px;
@@ -514,6 +517,7 @@ opacity: 1;
 }
 .fontawesome-cog{
 color: #FFF;
+top: 3px;
 cursor:pointer;
 text-align: center;
 /*margin: 1115px;
