--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -446,7 +446,7 @@ span[class*="thumbs-up"]:hover {
 	width:250px;
 	height:50%;
 	float:right;
-  right: 2%;
+  top: 5px;
 }
 .fontawesome-random {
   color:#FFF;
