--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -446,7 +446,7 @@ span[class*="thumbs-up"]:hover {
 	width:250px;
 	height:50%;
 	float:right;
-  top: 17.5px;
+  margin-top: 17.5px;
 }
 .fontawesome-random {
   color:#FFF;
