--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -34,11 +34,13 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 		<!--[if lte IE 7]><style>.main{display:none;} .support-note .note-ie{display:block;}</style><![endif]-->
 		<style>
 			@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
+            @import url(http://fonts.googleapis.com/css?family=Roboto);
 			body {
 				/*background: #563c55 url({{STATIC_URL}}img/6.jpg) no-repeat center top;*/
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
 				background-size: cover;
+				font-family: 'Roboto', sans-serif;
 			}
 			
 			.container > header h1,
