--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -2,6 +2,7 @@
 @import url(http://weloveiconfonts.com/api/?family=entypo);
 @import url(http://fonts.googleapis.com/css?family=Gafata);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Roboto);
 
 /*
 body {
@@ -23,7 +24,7 @@ font-size: 70px;
 .block-form{
 
 
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     /* Size and position */
     width: 500px;
@@ -116,8 +117,8 @@ font-size: 70px;
     border-radius: 3px;
 
     /* Font styles */
-    font-family: 'Open Sans', sans-serif;
-    color: #3AE9FF;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
 
 
 }
