--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -76,7 +76,8 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
     </head>
     <body>
        
-       <div id="texto"><h2>S<span>kyfolk.</span></h2></div>
+       <div id="texto"><h2>S<span>kyfolk.</span></h2>
+       	<img src="{{STATIC_URL}}img/logo.png"></div>
        {% block content %}{% endblock %}
 
             
