--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -70,6 +70,9 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				float:left;
 				font-family: 'Gafata', sans-serif;
 			}
+			.logo {
+				top: 20px;
+			}
 		</style>
 	{% block extra_head %}
 	{% endblock %}
@@ -77,7 +80,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
     <body>
        
        <div id="texto"><h2>S<span>kyfolk.</span></h2>
-       	<img src="{{STATIC_URL}}img/logo.png"></div>
+       	<img class="logo" src="{{STATIC_URL}}img/logo.png"></div>
        {% block content %}{% endblock %}
 
             
