--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -71,7 +71,8 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				font-family: 'Gafata', sans-serif;
 			}
 			.logo {
-				top: 20px;
+				top: -100px;
+				left: 50%;
 			}
 		</style>
 	{% block extra_head %}
