--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -71,7 +71,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				font-family: 'Gafata', sans-serif;
 			}
 			.logo {
-				top: -100px;
+				top: 10%;
 				left: 50%;
 			}
 		</style>
@@ -81,7 +81,8 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
     <body>
        
        <div id="texto"><h2>S<span>kyfolk.</span></h2>
-       	<img class="logo" src="{{STATIC_URL}}img/logo.png"></div>
+       	</div>
+       	<img class="logo" src="{{STATIC_URL}}img/logo.png">
        {% block content %}{% endblock %}
 
             
