--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -71,8 +71,10 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				font-family: 'Gafata', sans-serif;
 			}
 			.logo {
-				top: 10%;
+				top: 13%;
 				left: 50%;
+				width: 30px;
+				height: 30px;
 			}
 		</style>
 	{% block extra_head %}
