--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -70,9 +70,9 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				float:left;
 				font-family: 'Gafata', sans-serif;
 			}
-			.logo {
-				top: 17%;
-				left: 50%;
+			img.logo {
+				top: 20%;
+				left: 55%;
 				width: 15px;
 				height: 15px;
 			}
