--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -71,10 +71,10 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				font-family: 'Gafata', sans-serif;
 			}
 			img.logo {
-				top: 20%;
+				top: 50%;
 				left: 55%;
-				width: 15px;
-				height: 15px;
+				width: 50%;
+				height: 50%;
 			}
 		</style>
 	{% block extra_head %}
