--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -73,8 +73,8 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 			img.logo {
 				top: 50%;
 				left: 55%;
-				width: 50%;
-				height: 50%;
+				width: 70px;
+				height: 70px;
 			}
 		</style>
 	{% block extra_head %}
