--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -72,6 +72,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 			}
 			img.logo {
 				top: 80%;
+				margin-top: 30%;
 				left: 55%;
 				width: 80px;
 				height: 80px;
