--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -71,7 +71,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				font-family: 'Gafata', sans-serif;
 			}
 			img.logo {
-				top: -20%;
+				top: 20px;
 			    left: 55%;
 				width: 80px;
 				height: 80px;
