--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -73,6 +73,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 			img.logo {
 				top: 70px;
 			    left: 10%;
+			    float: left;
 				width: 80px;
 				height: 80px;
 			}
