--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -70,7 +70,10 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				float:left;
 				font-family: 'Gafata', sans-serif;
 			}
-			
+			img.logo {
+				width: 50px;
+				height: 50px;
+			}
 		</style>
 	{% block extra_head %}
 	{% endblock %}
