--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -73,6 +73,8 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 			img.logo {
 				width: 50px;
 				height: 50px;
+				margin-left: 50%;
+				margin-top: 0;
 			}
 		</style>
 	{% block extra_head %}
