--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -82,7 +82,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
     </head>
     <body>
        
-       <div id="texto"><h2>S<span>kyfolk.<img class="logo" src="{{STATIC_URL}}img/logo.png"></span></h2>
+       <div id="texto"><img class="logo" src="{{STATIC_URL}}img/logo.png"><h2>S<span>kyfolk.</span></h2>
        	</div>
        	
        {% block content %}{% endblock %}
