--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -74,7 +74,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				width: 50px;
 				height: 50px;
 				margin-left: 90%;
-				margin-top: 40%;
+				top: 40%;
 			}
 		</style>
 	{% block extra_head %}
