--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -75,6 +75,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 				height: 50px;
 				margin-left: 90%;
 				top: 40%;
+				position: absolute;
 			}
 		</style>
 	{% block extra_head %}
