--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -446,7 +446,8 @@ span[class*="thumbs-up"]:hover {
 	width:250px;
 	height:50%;
 	float:right;
-  margin-top: 9.5px;
+    margin-top: 9.5px;
+    background-color: #fff;
 }
 .fontawesome-random {
   color:#FFF;
