--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -138,8 +138,8 @@ top.window.outerWidth = screen.availWidth;
   		<div id ="box-tool">
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
-	  		<span class="fontawesome-random" href="aleatorio.html"</span>
-	  		<span class="fontawesome-cog" href="/config/changepass"></span>
+	  		<a class="fontawesome-random" href="aleatorio.html"</a>
+	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 
 	  		<div class="notifications">
   <span class="fontawesome-bell"><label class="count">3</label></span>
