--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -66,7 +66,7 @@
 </nav>
 <div id="panel"> 
 
-  <div id="widget" onClick="cambiopagina()"> 
+  <div id="widget" style="display: none;"> 
 <!--
     <div id="middle"><img src="{{STATIC_URL}}img/5.jpg" width="300" height="300"><span class="entypo-user"></span></div>
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
