--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -21,8 +21,8 @@ a, a:visited {
 /*1*/
 .wrapper {
   margin: 30px auto;
-  width: 90%;
-  height: 125px;
+  width: 100%;
+  height: 20%;
   background: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
