--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -21,8 +21,10 @@ a, a:visited {
 /*1*/
 .wrapper {
   margin: 30px auto;
+  min-width: 100%;
+  min-height: 125px;
   width: 100%;
-  height: 5%;
+  height: 125px;
   background: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
