--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -149,3 +149,13 @@ margin-top:25px;
 	color:rgba(255,255,255,0.7);
 		cursor:pointer;
 }
+#middle{
+
+
+padding-left:4%;
+padding-top:1%;
+
+
+}
+
+
