--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -19,7 +19,7 @@
         }
     </style>
   {% endif %}
-  
+
 {% endblock %}
 
 {% block content %}
@@ -28,7 +28,7 @@
       <li><a class="fontawesome-eye-open" href="#">Más visitados.</a></li>
       <li><a class="fontawesome-star-empty" href="#">Favoritos.</a>
         <ul>
-          <li><a href="#"><img class="clint" src="http://content7.flixster.com/rtactor/40/36/40361_pro.jpg"></a></li>
+          <li><a href="#"></a></li>
         
     
         </ul>
@@ -71,7 +71,7 @@
     <div id="middle"><img src="{{STATIC_URL}}img/5.jpg" width="300" height="300"><span class="entypo-user"></span></div>
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
 -->
-    <div id="middle"><img src="http://cinemarama.files.wordpress.com/2012/03/23.jpg" width="300" height="300"><span class="entypo-user"></span></div>
+    <div id="middle"><div class="entypo-user"></div></div>
 
     <div id="linkedin" class="size left"><a href="/friends"><span class="entypo-users"></span></a></div>
     <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
