--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -23,47 +23,31 @@
 {% endblock %}
 
 {% block content %}
-<nav id="menu">
-    <ul>
-      <li><a class="fontawesome-eye-open" href="#">Más visitados.</a></li>
-      <li><a class="fontawesome-star-empty" href="#">Favoritos.</a>
-        <ul>
-          <li><a href="#"><img class="clint" src="http://content7.flixster.com/rtactor/40/36/40361_pro.jpg"></a></li>
-        
-    
+<div id="menu">
+      <nav>
+        <ul class="boxtool">
+          <li class="fontawesome-eye-open"> Más visto </li>
+           <li class="fontawesome-thumbs-up"> + likes </li>
+          <li class="fontawesome-certificate"> Famosos </li>
+          <li class="fontawesome-star"> Favoritos </li>
+          <li class="fontawesome-globe"> Descubre </li>
+         <div id="Seguidoresrandom">
+           <ul class="followers"><h4 class="fontawesome-group">  Seguidores</h4>
+             <li><img src="http://www.theportobelloartsclub.com/wp-content/uploads/TonyMontana.jpg"> Tony Montana </li>
+             <li><img src="http://backgroundland.com/wp-content/uploads/2014/07/Wonderful-Purple-Bridge-Wallpaper-1024x536.jpg"> Mr Scarface.</li>
+             <li><img src="http://www.nocturnar.com/imagenes/fotos/wallpapers-fondos-de-pantalla-wallpaper-wallpaper-lampadas-wallpapers.jpg">Pedro Sin apellido</li>
+             <li class="more"> Más</li>
+           </ul>
+          </div>
         </ul>
-      </li>
-      <li><a class="fontawesome-star-half" href="#">Famosos.</a>
-        <ul>
-          <li><a href="#">Deportes</a>
-            <ul>
-              <li><a href="#">Futbol</a></li>
-              <li><a href="#">Baloncesto</a></li>
-              <li><a href="#">Tenis</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Cine y música</a>
-            <ul>
-              <li><a href="#">Cine</a></li>
-              <li><a href="#">Musica</a></li>
-              <li><a href="#">Premios</a></li>
-              <li><a href="#">Eventos</a></li>
-              <li><a href="#">Sous-menu 5</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Otros</a>
-            <ul>
-              <li><a href="#">Cómicos</a></li>
-              <li><a href="#">Sous-menu 2</a></li>
-              <li><a href="#">Sous-menu 3</a></li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-      <li><a class="fontawesome-globe" href="#">Descubre.</a></li>
-      <li><a class="fontawesome-heart-empty" href="#">Los más gustados.</a></li>
-    </ul>
-</nav>
+        <div id="imd">
+          <ul class="imd">
+            <li class="fontawesome-star-half"> Comentarios favoritos </li>
+            <li class="fontawesome-briefcase"> Mi baúl </li>
+          </ul>
+        </div>
+        <nav>
+   </div>
 <div id="panel"> 
 
   <div id="widget" onClick="cambiopagina()"> 
