--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -25,7 +25,7 @@
 {% block content %}
 <nav id="menu">
     <ul>
-      <li><a class="fontawesome-eye-open" href="#">Más visitados.</a></li>
+      <li><a class="fontawesome-eye-open" href="#">+ visitados.</a></li>
       <li><a class="fontawesome-star-empty" href="#">Favoritos.</a>
         <ul>
           <li><a href="#"><img class="clint" src="http://content7.flixster.com/rtactor/40/36/40361_pro.jpg"></a></li>
@@ -61,7 +61,7 @@
         </ul>
       </li>
       <li><a class="fontawesome-globe" href="#">Descubre.</a></li>
-      <li><a class="fontawesome-heart-empty" href="#">Los más gustados.</a></li>
+      <li><a class="fontawesome-heart-empty" href="#">+ gustados.</a></li>
     </ul>
 </nav>
 <div id="panel"> 
