--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1599,17 +1599,18 @@ button:hover {
   border-radius: 210px;
   box-shadow:2px 0px 2px #444;
   position:fixed;
-  left:2%;top:2%;
+  left:2%;top:1%;
   float: left;
   /*margin:100px auto;*/
   z-index:2;
   overflow:hidden;
   opacity: 1;
   line-height: 1;
+  transition: all 1s ease-in-out;
   }
   #Menu:hover {
     border: 2px solid #33F0DD;
-    transform: scale(1.2);
+    -webkit-transform: scale(1,3);
   }
 
   #centro {
