--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -23,9 +23,9 @@
 {% endblock %}
 
 {% block content %}
-<div id="menu">
+<div id="menuu">
       <nav>
-        <ul class="boxtool">
+        <ul class="boxxxtool">
           <li class="fontawesome-eye-open"> Más visto </li>
            <li class="fontawesome-thumbs-up"> + likes </li>
           <li class="fontawesome-certificate"> Famosos </li>
