--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -23,8 +23,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="menuu">
-      <nav>
+      <nav id="menuu">
         <ul class="boxxxtool">
           <li class="fontawesome-eye-open"> Más visto </li>
            <li class="fontawesome-thumbs-up"> + likes </li>
@@ -47,7 +46,6 @@
           </ul>
         </div>
         <nav>
-   </div>
 <!--<nav id="menu">
     <ul>
       <li><a class="fontawesome-eye-open" href="#">+ visitados.</a></li>
