--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -23,30 +23,7 @@
 {% endblock %}
 
 {% block content %}
-      <nav id="menuu">
-        <ul class="boxxxtool">
-          <li class="fontawesome-eye-open"> Más visto </li>
-           <li class="fontawesome-thumbs-up"> + likes </li>
-          <li class="fontawesome-certificate"> Famosos </li>
-          <li class="fontawesome-star"> Favoritos </li>
-          <li class="fontawesome-globe"> Descubre </li>
-         <div id="Seguidoresrandom">
-           <ul class="followers"><h4 class="fontawesome-group">  Seguidores</h4>
-             <li><img class="lol" src="http://www.theportobelloartsclub.com/wp-content/uploads/TonyMontana.jpg"> Tony Montana </li>
-             <li><img class="lol" src="http://backgroundland.com/wp-content/uploads/2014/07/Wonderful-Purple-Bridge-Wallpaper-1024x536.jpg"> Mr Scarface.</li>
-             <li><img class="lol" src="http://www.nocturnar.com/imagenes/fotos/wallpapers-fondos-de-pantalla-wallpaper-wallpaper-lampadas-wallpapers.jpg">Pedro Sin apellido</li>
-             <li class="more"> Más</li>
-           </ul>
-          </div>
-        </ul>
-        <div id="imd">
-          <ul class="imd">
-            <li class="fontawesome-star-half"> Comentarios favoritos </li>
-            <li class="fontawesome-briefcase"> Mi baúl </li>
-          </ul>
-        </div>
-        <nav>
-<!--<nav id="menu">
+<nav id="menu">
     <ul>
       <li><a class="fontawesome-eye-open" href="#">+ visitados.</a></li>
       <li><a class="fontawesome-star-empty" href="#">Favoritos.</a>
@@ -86,7 +63,7 @@
       <li><a class="fontawesome-globe" href="#">Descubre.</a></li>
       <li><a class="fontawesome-heart-empty" href="#">+ gustados.</a></li>
     </ul>
-</nav>-->
+</nav>
 <div id="panel"> 
 
   <div id="widget" onClick="cambiopagina()"> 
