--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -57,10 +57,8 @@
 <div class=" foto_perfil" title="{{ user_profile.username }}"></div></ul>
  
 
-   
-    <div id="panel1">
-      
-    <nav id="menuu">
+      <div id="menuu">
+    <nav>
         <ul class="boxxxtool">
           <li class="fontawesome-eye-open"> Más visto </li>
            <li class="fontawesome-thumbs-up"> + likes </li>
@@ -83,7 +81,6 @@
           </ul>
         </div>
         <nav>
-    
     </div>
     
 </div>
