--- a/skyfolk/static/css/nav2.css
+++ b/skyfolk/static/css/nav2.css
@@ -8,7 +8,7 @@
 
 #menuu {
   float: right;
-  width: 100%;
+  width: 900px;
   height: 100%;
   border: 1px medium #000;
   font-family: 'Open Sans Condensed', sans-serif;
