--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -57,30 +57,21 @@
 <div class=" foto_perfil" title="{{ user_profile.username }}"></div></ul>
  
 
-      <div id="menuu">
-    <nav>
-        <ul class="boxxxtool">
-          <li class="fontawesome-eye-open"> Más visto </li>
-           <li class="fontawesome-thumbs-up"> + likes </li>
-          <li class="fontawesome-certificate"> Famosos </li>
-          <li class="fontawesome-star"> Favoritos </li>
-          <li class="fontawesome-globe"> Descubre </li>
-         <div id="Seguidoresrandom">
-           <ul class="followers"><h4 class="fontawesome-group">  Seguidores</h4>
-             <li><img class="lol" src="http://www.theportobelloartsclub.com/wp-content/uploads/TonyMontana.jpg"> Tony Montana </li>
-             <li><img class="lol" src="http://backgroundland.com/wp-content/uploads/2014/07/Wonderful-Purple-Bridge-Wallpaper-1024x536.jpg"> Mr Scarface.</li>
-             <li><img class="lol" src="http://www.nocturnar.com/imagenes/fotos/wallpapers-fondos-de-pantalla-wallpaper-wallpaper-lampadas-wallpapers.jpg">Pedro Sin apellido</li>
-             <li class="more"> Más</li>
-           </ul>
-          </div>
-        </ul>
-        <div id="imd">
-          <ul class="imd">
-            <li class="fontawesome-star-half"> Comentarios favoritos </li>
-            <li class="fontawesome-briefcase"> Mi baúl </li>
-          </ul>
-        </div>
-        <nav>
+   
+    <div id="panel1">
+      
+     <dropdown>
+ 
+  <ul class="animate">
+    <li class="animate">Perfil <i class="entypo-user"></i></li>
+    <li class="animate">Multimedia<i class="entypo-video"></i></li>
+    <li class="animate">Juegos<i class="entypo-rocket"></i></li>
+    
+  </ul>
+</dropdown>
+
+
+
     </div>
     
 </div>
