--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -186,7 +186,7 @@
 
 
 /* cf */
-/*
+
 *{
   padding: 0;
   margin: 0;
@@ -271,6 +271,6 @@ $colors: #E74C3C, #0072B5, #2C3E50;
   -moz-backface-visibility:hidden; /* Firefox */
   -ms-backface-visibility:hidden; /* Internet Explorer */
 }
-
+*/
 
 
