--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -58,7 +58,7 @@
  
 
    
-    <div id="panel1">
+    <div id="panel1" style="display:none;">
       
      <dropdown>
  
@@ -404,7 +404,7 @@
 
 <!-- Mensaje flotante -->
 
-<div id="page-wrapper">
+<div id="page-wrapper" style="display:none;">
   <h1></h1>
   
   <div id="status">Conectando...</div>
