--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -175,6 +175,11 @@ body {
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
   position: relative;
   z-index: 3;
+  cursor: pointer;
+}
+.profile_card .perfil .foto_perfil:hover {
+  transition: all .3s ease-in-out;
+  -webkit-transform: scale(1.2);
 }
 .profile_card .perfil .inner_content {
   width: 92%;
