--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -426,6 +426,11 @@ body > .container {
     width: 100%;
     border-top-left-radius: 0.3rem;
     border-top-right-radius: 0.3rem; }
+    .user-card .user-avatar .user-bg:hover {
+      -webkit-filter: blur(4px);
+      transition: all 1s ease-in-out;
+
+    }
     .user-card .user-avatar .user-bg:after {
       content: "";
       width: 100%;
@@ -1646,3 +1651,26 @@ margin-top:25px;
   }
 
 
+/* INFORMACIÓN SOBRE IMÁGEN */
+ul.informac {
+    list-style-type: none;
+    display: block;
+    position: absolute;
+    top: 90%;
+    font-size: 20px;
+    left: 23%;
+    text-align: center;
+    color: #fff;
+}
+div.infx {
+  opacity: 0;
+  position: absolute;
+  left: 15%;
+  width: 30%;
+  height: 30%;
+  top: 70%;
+  font-family: 'Source Sans Pro';
+}
+div.infx:hover {
+  opacity: 1;
+  }
