--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -87,7 +87,7 @@
  
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="user-card card">
-          <div class="user-avatar"><img src="{{STATIC_URL}}img/1.jpg" class="user-bg"><span class="fontawesome-pencil"> </span>
+          <div class="user-avatar"><div class="infx"><ul class="informac"><li>España (Murcia)</li><li>28/01/1966</li><li>Ing.Sistemas.</li></ul></div><img src="{{STATIC_URL}}img/1.jpg" class="user-bg"><span class="fontawesome-pencil" title="Configuración rápida"> </span>
             <input type="checkbox" id="button-menu"  />
             <div class="caja">
              <div class="item">
