--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -75,10 +75,25 @@
     </div>
     
 </div>
-
-
-
-
+<!-- Configuración rápida -->
+<div id="fastconf">
+        <span class="fontawesome-cog">  Configuración rápida.</span>
+        <img class="profile" src="http://data2.whicdn.com/images/18501113/large.jpg"></img>
+        <span id="close" class="fontawesome-remove" title="Cerrar"></span>
+      <input type="text" name="FirstName" target="million" placeholder="Username">
+        <input type="text" name="secondname" target="shot" placeholder="state">
+        <input type="url" name="paginaweb" target="url" placeholder="Página web">
+        <input type="location" name="location" target="location" placeholder="España (Murcia)">
+        <nav class="mi-nav">
+        <ul class="mi-nav-list">
+            <li class="fontawesome-comment-alt" title="Ajustes del Chat"></li>
+            <li class="fontawesome-eye-open" title="Privacidad"></li>
+            <li class="fontawesome-calendar" title="Mi agenda"></li>
+            <li class="fontawesome-bell-alt" title="Notificaciones"></li>
+            <li class="fontawesome-edit" title="Diseño"></li>
+            </ul></nav>
+      </div>
+<!-- Fin de conf rápida -->
 <div class="container">
   
   <div class="col-lg-8 col-md-6 col-sm-12">
