--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -15,6 +15,7 @@
   left: 30%;
   position: absolute;
   display: none;
+  z-index: 9999;
 }
 span.fontawesome-cog {
   left: 26%;
@@ -105,7 +106,7 @@ input[target="location"] {
     transition: all .4s ease-in-out;
     border-radius: 10%;
 }
-li.fontawesome-comment-alt {
+#chatt {
     color: #fff;
     background-color: #00a7ef;
     padding: 7px;
@@ -113,7 +114,7 @@ li.fontawesome-comment-alt {
     min-height: 60px;
     margin:0;
 }
-li.fontawesome-eye-open {
+#eyeopp {
     background-color: #ffa200;
     color: #fff;
     min-width: 60px;
