--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -15,6 +15,7 @@
   left: 30%;
   position: absolute;
   display: none;
+  background-color: #fff;
   z-index: 9999;
 }
 span.fontawesome-cog {
@@ -106,7 +107,7 @@ input[target="location"] {
     transition: all .4s ease-in-out;
     border-radius: 10%;
 }
-#chatt {
+li[target="chat"] {
     color: #fff;
     background-color: #00a7ef;
     padding: 7px;
@@ -114,7 +115,7 @@ input[target="location"] {
     min-height: 60px;
     margin:0;
 }
-#eyeopp {
+li[target="eyep"] {
     background-color: #ffa200;
     color: #fff;
     min-width: 60px;
@@ -157,7 +158,7 @@ span.fontawesome-remove {
     span.fontawesome-remove:hover {
         color:tomato;
     }
-li:hover {
+ul.mi-nav-list:hover {
     transform: scale(1.2);
     border: 4px solid #9fccc3;
     cursor: pointer;
