--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -29,8 +29,8 @@ span.fontawesome-cog {
   transition: all 0.3s ease-in-out;
 }
 img.profile {
-  width: 120px;
-  height: 120px;
+  width: 140px;
+  height: 140px;
   position: absolute;
   left: 38%;
   display: block;
@@ -47,7 +47,7 @@ input[target="million"]  {
   position: absolute;
   left: 32%;
   text-align: center;
-  top: 43%;
+  top: 45%;
     border: 2px solid #9FCCC3;
     border-radius: 5%;
     padding: 8px;
@@ -68,7 +68,7 @@ input[target="shot"] {
 }
 input[target="url"] {
     position: absolute;
-    left: 32%;
+    left: 40%;
     text-align: center;
     top: 57%;
     border: 2px solid #9FCCC3;
@@ -79,7 +79,7 @@ input[target="url"] {
 }
 input[target="location"] {
     position: absolute;
-    left: 32%;
+    left: 40%;
     text-align: center;
     top: 64%;
     border: 2px solid #9Fccc3;
@@ -158,7 +158,7 @@ span.fontawesome-remove {
     span.fontawesome-remove:hover {
         color:tomato;
     }
-ul.mi-nav-list:hover {
+.mi-nav-list li:hover {
     transform: scale(1.2);
     border: 4px solid #9fccc3;
     cursor: pointer;
