--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -80,14 +80,14 @@
         <span class="fontawesome-cog">  Configuración rápida.</span>
         <img class="profile" src="http://data2.whicdn.com/images/18501113/large.jpg"></img>
         <span id="close" class="fontawesome-remove" title="Cerrar"></span>
-      <input type="text" name="FirstName" target="million" placeholder="Username">
-        <input type="text" name="secondname" target="shot" placeholder="state">
-        <input type="url" name="paginaweb" target="url" placeholder="Página web">
-        <input type="location" name="location" target="location" placeholder="España (Murcia)">
+      <input type="text" name="FirstName" target="million" value="{{ user_profile.username }}" placeholder="Username">
+        <input type="text" name="secondname" target="shot" value="Play Hard" placeholder="state">
+        <input type="url" name="paginaweb" target="url" value="skyfolk.com" placeholder="Página web">
+        <input type="location" name="location" target="location" value="España (Murcia)" placeholder="Zona">
         <nav class="mi-nav">
         <ul class="mi-nav-list">
-            <li target="chat" class="fontawesome-comment-alt" title="Ajustes del Chat"></li>
-            <li target="eyep" class="fontawesome-eye-open" title="Privacidad"></li>
+            <li class="fontawesome-comment-alt" title="Ajustes del Chat"></li>
+            <li class="fontawesome-eye-open" title="Privacidad"></li>
             <li class="fontawesome-calendar" title="Mi agenda"></li>
             <li class="fontawesome-bell-alt" title="Notificaciones"></li>
             <li class="fontawesome-edit" title="Diseño"></li>
