--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -86,8 +86,8 @@
         <input type="location" name="location" target="location" value="España (Murcia)" placeholder="Zona">
         <nav class="mi-nav">
         <ul class="mi-nav-list">
-            <li><span class="fontawesome-comment-alt" title="Ajustes del Chat"></li>
-            <li><span class="fontawesome-eye-open" title="Privacidad"></li>
+            <li class="fontawesome-comment-alt" title="Ajustes del Chat"></li>
+            <li class="fontawesome-eye-open" title="Privacidad"></li>
             <li class="fontawesome-calendar" title="Mi agenda"></li>
             <li class="fontawesome-bell-alt" title="Notificaciones"></li>
             <li class="fontawesome-edit" title="Diseño"></li>
