--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -106,10 +106,8 @@ input[target="location"] {
     margin: 0;
     transition: all .4s ease-in-out;
     border-radius: 10%;
-    width: 60px;
-    height: 60px;
 }
-ul.mi-nav-list li.fontawesome-comment-alt {
+.mi-nav-list li.fontawesome-comment-alt {
     color: #fff;
     background-color: #00a7ef;
     padding: 7px;
@@ -117,7 +115,7 @@ ul.mi-nav-list li.fontawesome-comment-alt {
     min-height: 60px;
     margin:0;
 }
-ul.mi-nav-list li.fontawesome-eye-open {
+.mi-nav-list li.fontawesome-eye-open {
     background-color: #ffa200;
     color: #fff;
     min-width: 60px;
