--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -83,11 +83,11 @@
       <input type="text" name="FirstName" target="million" value="{{ user_profile.username }}" placeholder="Username">
         <input type="text" name="secondname" target="shot" value="Play Hard" placeholder="state">
         <input type="url" name="paginaweb" target="url" value="skyfolk.com" placeholder="Página web">
-        <input type="location" name="location" target="location" value="España (Murcia)" placeholder="Zona">
+        <input type="location" class="fontawesome-map-marker" name="location" target="location" value="España (Murcia)" placeholder="Zona">
         <nav class="mi-nav">
         <ul class="mi-nav-list">
-            <li class="fontawesome-comment-alt" title="Ajustes del Chat"></li>
-            <li class="fontawesome-eye-open" title="Privacidad"></li>
+            <li class="fontawesome-comment" title="Ajustes del Chat"></li>
+            <li class="fontawesome-lock" title="Privacidad"></li>
             <li class="fontawesome-calendar" title="Mi agenda"></li>
             <li class="fontawesome-bell-alt" title="Notificaciones"></li>
             <li class="fontawesome-edit" title="Diseño"></li>
