--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -32,12 +32,13 @@ img.profile {
   width: 140px;
   height: 140px;
   position: absolute;
-  left: 38%;
+  left: 40%;
   display: block;
   top: 20%;
   border: 2px solid #9FCCC3;
   text-align: center;
   transition: all .3s ease-in-out;
+  cursor: pointer;
 }
 img.profile:hover {
   border: 4px solid #9FCCC3;
