--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -83,7 +83,7 @@
       <input type="text" name="FirstName" target="million" value="{{ user_profile.username }}" placeholder="Username">
         <input type="text" name="secondname" target="shot" value="Play Hard" placeholder="state">
         <input type="url" name="paginaweb" target="url" value="skyfolk.com" placeholder="Página web">
-        <input type="location" class="fontawesome-map-marker" name="location" target="location" value="España (Murcia)" placeholder="Zona">
+        <input type="location" name="location" target="location" value="España (Murcia)" placeholder="Zona">
         <nav class="mi-nav">
         <ul class="mi-nav-list">
             <li class="fontawesome-comment" title="Ajustes del Chat"></li>
