--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1652,9 +1652,12 @@ ul.informac {
     display: block;
     position: absolute;
     font-size: 20px;
-    left: 23%;
+    left: 22%;
     text-align: center;
     color: #fff;
+}
+ul.informac:hover {
+  color: #EB52FC;
 }
 div.infx {
   opacity: 0;
