--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1652,17 +1652,17 @@ ul.informac {
     display: block;
     position: absolute;
     font-size: 20px;
-    left: 22%;
+    left: 21%;
     text-align: center;
     color: #fff;
 }
 ul.informac:hover {
-  color: #EB52FC;
+  color: #fff;
 }
 div.infx {
   opacity: 0;
   position: absolute;
-  left: 23%;
+  left: 21%;
   width: 15%;
   height: 15%;
   top: 18%;
