--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1016,8 +1016,8 @@ margin: 0px;
 width: 100%;
 position: fixed;
 display: block;
-box-shadow: 3px 2px 4px 3px;
-background: rgba(0, 0, 0, 0.7);
+box-shadow: 3px 2px 4px 3px #fff;
+background: #fff;
 opacity: 0.8;
 top: 3px;
 z-index: 9999;
