--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -451,7 +451,7 @@ span[class*="thumbs-up"]:hover {
     margin-top: 9.5px;
 }
 .fontawesome-random {
-  color:#FFF;
+  color:##00FFFF;
   cursor:pointer;
   margin-top: 15px;
   text-align:center;
@@ -471,7 +471,7 @@ span[class*="thumbs-up"]:hover {
   border-left: none;
 }
 .fontawesome-comment-alt {
-color: #FFF;
+color: ##00FFFF;
 cursor:pointer;
 margin-top: 3px;
 text-align: center;
@@ -495,7 +495,7 @@ opacity:1;
  border-left: none;
 }
 .fontawesome-th {
-color:#FFF;
+color:##00FFFF;
 cursor:pointer;
 margin-top: 3px;
 text-align: center;
@@ -519,7 +519,7 @@ opacity: 1;
  border-left: none;
 }
 .fontawesome-cog{
-color: #FFF;
+color: ##00FFFF;
 margin-top: 3px;
 cursor:pointer;
 text-align: center;
