--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1430,7 +1430,7 @@ button:hover {
 
 
 .fontawesome-bell {
-  color: #FFF;
+  color: ##00FFFF;
   cursor:pointer;
   text-align:center;
   font-size: 31px;
