--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -63,10 +63,14 @@
      <dropdown>
  
   <ul class="animate">
-    <li class="animate">Perfil <i class="entypo-user"></i></li>
-    <li class="animate">Multimedia<i class="entypo-video"></i></li>
-    <li class="animate">Juegos<i class="entypo-rocket"></i></li>
-    
+    <li class="animate">Mi perfil <i class="fontawesome-user"></i></li>
+    <li class="animate">Multimedia <i class="fontawesome-film"></i></li>
+    <li class="animate">Juegos <i class="fontawesome-play"></i></li>
+    <li class="animate">+ Visto <i class="fontawesome-eye-open"></i></li>
+    <li class="animate"> + likes <i class="fontawesome-thumbs-up"></i></li>
+    <li class="animate"> Famosos <i class="fontawesome-certificate"></i></li>
+    <li class="animate"> Favoritos <i class="fontawesome-star"></i></li>
+    <li class="animate"> Descubre <i class="fontawesome-globe"></i></li>
   </ul>
 </dropdown>
 
