--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -207,7 +207,7 @@ dropdown{
 dropdown label, dropdown ul li{
   display: block;
   width: 200px;
-  background: fff;
+  background: #fff;
   padding: 15px 20px;
   color: #1ABC9C;
 }
@@ -215,6 +215,7 @@ dropdown label:hover, dropdown ul li:hover{
   background: #1ABC9C;
   color: white;
   cursor: pointer;
+  border-bottom: 1px solid aquamarine;
 }
 dropdown label{
   color: #1ABC9C;
