--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -71,7 +71,8 @@
     <li class="animate"> Famosos <i class="fontawesome-certificate"></i></li>
     <li class="animate"> Favoritos <i class="fontawesome-star"></i></li>
     <li class="animate"> Descubre <i class="fontawesome-globe"></i></li>
-    <h4 class="seg">Seguidores</h4>
+    <li class="animatee"> Mi baúl <i class="fontawesome-briefcase"></i></li>
+    <li class="animatee"> Comentarios favoritos <i class="fontawesome-star-half"></i></li>
   </ul>
 </dropdown>
 
