--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -66,11 +66,11 @@
     <li class="animate">Mi perfil <i class="fontawesome-user"></i></li>
     <li class="animate">Multimedia <i class="fontawesome-film"></i></li>
     <li class="animate">Juegos <i class="fontawesome-play"></i></li>
-    <li class="animate">+ Visto <i class="fontawesome-eye-open"></i></li>
-    <li class="animate"> + likes <i class="fontawesome-thumbs-up"></i></li>
-    <li class="animate"> Famosos <i class="fontawesome-certificate"></i></li>
-    <li class="animate"> Favoritos <i class="fontawesome-star"></i></li>
-    <li class="animate"> Descubre <i class="fontawesome-globe"></i></li>
+    <li class="animatex">+ Visto <i class="fontawesome-eye-open"></i></li>
+    <li class="animatex"> + likes <i class="fontawesome-thumbs-up"></i></li>
+    <li class="animatex"> Famosos <i class="fontawesome-certificate"></i></li>
+    <li class="animatex"> Favoritos <i class="fontawesome-star"></i></li>
+    <li class="animatex"> Descubre <i class="fontawesome-globe"></i></li>
     <li class="animatee"> Mi baúl <i class="fontawesome-briefcase"></i></li>
     <li class="animatee"> Comentarios favoritos <i class="fontawesome-star-half"></i></li>
   </ul>
