--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -5,7 +5,7 @@
 <SCRIPT LANGUAGE="JavaScript">
 fondo = new Array(6);
 fondo[0] = '{{STATIC_URL}}img/6.jpg'
-fondo[1] = '{{STATIC_URL}}img/nueva-york1.jpg'
+fondo[1] = '{{STATIC_URL}}img/5.jpg'
 fondo[2] = '{{STATIC_URL}}img/bg3.jpg'
 fondo[3] = '{{STATIC_URL}}img/8319280274_808eb31ec1_b.jpg'
 fondo[4] = '{{STATIC_URL}}img/9484523575_f08c124a53_b.jpg'
