--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -387,12 +387,12 @@ font-size: 70px;
     -webkit-box-shadow: 0px 1px 0px 0px #f0f7fa;
     box-shadow: 0px 1px 0px 0px #f0f7fa;
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6E6E6E), color-stop(1, #6E6E6E));
-    background:-moz-linear-gradient(top, #6E6E6E 5%, #FF73E4 100%);
-    background:-webkit-linear-gradient(top, #6E6E6E 5%, #FF73E4 100%);
-    background:-o-linear-gradient(top, #6E6E6E 5%, #FF73E4 100%);
-    background:-ms-linear-gradient(top, #76E6E6E 5%, #FF73E4 100%);
-    background:linear-gradient(to bottom, #6E6E6E 5%, #FF73E4 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#B133F0', endColorstr='#FF73E4',GradientType=0);
+    background:-moz-linear-gradient(top, #6E6E6E 5%, #9A9A9A 100%);
+    background:-webkit-linear-gradient(top, #6E6E6E 5%, #9A9A9A 100%);
+    background:-o-linear-gradient(top, #6E6E6E 5%, #9A9A9A 100%);
+    background:-ms-linear-gradient(top, #76E6E6E 5%, #9A9A9A 100%);
+    background:linear-gradient(to bottom, #6E6E6E 5%, #9A9A9A 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#B133F0', endColorstr='#9A9A9A',GradientType=0);
     background-color:#6E6E6E;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
@@ -414,11 +414,11 @@ font-size: 70px;
 }
 #link-login:hover {
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6E6E6E), color-stop(1, #6E6E6E));
-    background:-moz-linear-gradient(top, #FF73E4 5%, #6E6E6E 100%);
-    background:-webkit-linear-gradient(top, #FF73E4 5%, #6E6E6E 100%);
-    background:-o-linear-gradient(top, #FF73E4 5%, #6E6E6E 100%);
-    background:-ms-linear-gradient(top, #FF73E4 5%, #6E6E6E 100%);
-    background:linear-gradient(to bottom, #FF73E4 5%, #6E6E6E 100%);
+    background:-moz-linear-gradient(top, #9A9A9A 5%, #6E6E6E 100%);
+    background:-webkit-linear-gradient(top, #9A9A9A 5%, #6E6E6E 100%);
+    background:-o-linear-gradient(top, #9A9A9A 5%, #6E6E6E 100%);
+    background:-ms-linear-gradient(top, #9A9A9A 5%, #6E6E6E 100%);
+    background:linear-gradient(to bottom, #9A9A9A 5%, #6E6E6E 100%);
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6E6E6E', endColorstr='#B133F0',GradientType=0);
     background-color:#6E6E6E;
 }
