--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -696,7 +696,7 @@ body > .container {
 
 
 .video-player {
-  background: #1d2122; }
+  background: ##1ABC9C; }
   .video-player .vbox {
     position: relative; }
     .video-player .vbox .thumbnail {
