--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1655,9 +1655,9 @@ ul.informac {
     left: 21%;
     text-align: center;
     color: #fff;
-    filter: alpha(opacity=0);
+    opacity: 0;
 }
 .user-bg:hover ul.informac {
   color: #fff;
-  filter: alpha(opacity=100);
+  opacity: 1;
 }
