--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1655,9 +1655,20 @@ ul.informac {
     left: 21%;
     text-align: center;
     color: #fff;
-    opacity: 0;
 }
-.user-bg:hover ul.informac {
+ul.informac:hover {
   color: #fff;
-  opacity: 1;
 }
+div.infx {
+  opacity: 0;
+  position: absolute;
+  left: 21%;
+  width: 15%;
+  height: 15%;
+  top: 18%;
+  font-family: 'Source Sans Pro';
+}
+div.infx:hover {
+  opacity: 1;
+  transition: all 1s ease-in-out;
+  }
