--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1663,8 +1663,9 @@ div.infx {
   opacity: 0;
   position: absolute;
   left: 21%;
-  width: 15%;
-  height: 15%;
+  min-width: 15%;
+  max-width: 15%;
+  height: auto;
   top: 18%;
   font-family: 'Source Sans Pro';
 }
